--- a/aps_5.ipynb
+++ b/aps_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,32 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36.69668246445497"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_of_earthquakes = len(df)\n",
-    "time_elapsed = df['Date'].iloc[-1] - df['Date'].iloc[0]\n",
-    "months_elapsed = time_elapsed.days / 30\n",
-    "\n",
-    "monthly_avg = n_of_earthquakes / months_elapsed\n",
-    "monthly_avg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +453,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +490,7 @@
        "0.5712012728719172"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -539,43 +514,50 @@
      "output_type": "stream",
      "text": [
       "mu:  1.7506963788300836\n",
-      "sigma_mu:  1.7506963788300836\n"
+      "sigma_mu:  1.7506963788300836\n",
+      "sigma:  3.0649378108487677\n"
      ]
     }
    ],
    "source": [
     "mu = 1 / monthly_avg\n",
-    "# * ele mandou meter essa no enunciado (nn entendi pq mas ok)\n",
+    "sigma = 1 / (monthly_avg ** 2)\n",
+    "# * não entendi pq tenho que fazer o sigma_mu se é igual ao mu\n",
     "sigma_mu = st.expon.std(scale=mu)\n",
     "\n",
     "print('mu: ', mu)\n",
-    "print('sigma_mu: ', sigma_mu)"
+    "print('sigma_mu: ', sigma_mu)\n",
+    "print('sigma: ', sigma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lower_bound:  -1.6806054715415708\n",
-      "upper_bound:  5.181998229201738\n"
+      "lower:  0.04432379475801167\n",
+      "upper:  6.458107902257962\n"
      ]
     }
    ],
    "source": [
-    "# estimando o intervalo de confianca\n",
-    "z = st.norm.ppf(0.975)\n",
+    "lower = st.expon.ppf(0.025, scale=mu)\n",
+    "upper = st.expon.ppf(0.975, scale=mu)\n",
     "\n",
-    "lower_bound = mu - z * sigma_mu\n",
-    "upper_bound = mu + z * sigma_mu\n",
-    "\n",
-    "print('lower_bound: ', lower_bound)\n",
-    "print('upper_bound: ', upper_bound)"
+    "print('lower: ', lower)\n",
+    "print('upper: ', upper)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
